--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ header h1 {
     margin: 10px 10px 20px;
     padding: 10px;
     background: #c7ecee;
-    border-radius: 0.25em;
+    border-radius: 2rem;
     border: 1px solid rgba(50, 50, 50, 0.3);
     transition: .4s ease-out;
     overflow: hidden;
